--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +29,11 @@
     <title>Document</title>
   </head>
   <body>
-    Hello world
-    <i class="fa-solid fa-code"></i>
+    <div class="hero">
+      <p>👋 Hello, I'm</p>
+      <h1>Yelyzaveta Pieieva</h1>
+      <h2 class="mb-5">Front-end developer based in Vancouver, Canada</h2>
+      <a href="about.html#contact-me" class="btn btn-branding">Contact me</a>
+    </div>
   </body>
 </html>
