--- a/about.html
+++ b/about.html
@@ -28,5 +28,26 @@
     <link rel="stylesheet" href="src/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container about-section">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="about-section-content">
+            <h1 class="mt-3">Hi I am Yelyzaveta Pieieva</h1>
+            <h2 class="mt-3 mb-4">Frontend Developer, based in Canada</h2>
+            <p class="mb-5">
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus
+            </p>
+            <a href="" class="btn btn-branding">View my projects</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/me.jpg" alt="" class="img-fluid rounded" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
