--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container about-section">
+    <div class="container content-container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
+          <div class="content">
             <h1 class="mt-3">Hi I am Yelyzaveta Pieieva</h1>
             <h2 class="mt-3 mb-4">Frontend Developer, based in Canada</h2>
             <p class="mb-5">
