Added contact page content

--- a/contact.html
+++ b/contact.html
@@ -28,5 +28,26 @@
     <link rel="stylesheet" href="src/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="content-container conatiner">
+      <div class="content">
+        <h1 class="mb-5">Let's get in touch!</h1>
+        <h2>Email</h2>
+        <p>
+          <a href="mailto:peeva.liz@gmail.com">peeva.liz@gmail.com</a>
+        </p>
+        <h2>Twitter</h2>
+
+        <p>
+          <a href="https://twitter.com" target="_blank">@peeva.liz</a>
+        </p>
+        <h2>Instagram</h2>
+        <p>
+          <a href="https://www.instagram.com/life_by_elisabeth/" target="_blank"
+            >@life_by_elisabeth</a
+          >
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
