--- a/index.html
+++ b/index.html
@@ -122,6 +122,36 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:peeva.liz@gmail.com" class="email-link"
+            >peeva.liz@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/life_by_elisabeth/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://github.com/peevaliz"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100017708328922&mibextid=LQQJ4d"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
