--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,39 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>Document</title>
+    <title>Contact Yelyzaveta | Yelyzaveta Pieieva</title>
+    <meta
+      name="description"
+      content="Contact Yelyzaveta. Yelyzaveta is a front-end developer based in Vancouver, Canada."
+    />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            alt="Yelyzaveta logo"
+            class="logo d-none d-md-block"
+          />
+          <img
+            src="images/logo-small.jpg"
+            alt="Yelyzaveta small logo"
+            class="logo d-block d-md-none"
+          />
+        </a>
+
+        <ul>
+          <li><a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Yelyzaveta"> About</a></li>
+          <li><a href="/work.html" title="Yelyzaveta`s work"> Work</a></li>
+          <li class="active">
+            <a href="/contact.html" title="Contact Yelyzaveta"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container conatiner">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
@@ -49,5 +79,57 @@
         </p>
       </div>
     </div>
+    <footer class="container">
+      <div
+        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            title="Contact Yelyzaveta"
+            class="btn btn-branding mt-3"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:peeva.liz@gmail.com"
+          title="Email to Yelyzaveta"
+          class="email-link"
+          >peeva.liz@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.instagram.com/life_by_elisabeth/"
+          title="Instagram profile"
+          target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://github.com/peevaliz"
+          title="GitHub profile"
+          target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100017708328922&mibextid=LQQJ4d"
+          title="Facebook profile"
+          target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+      </div>
+      <p class="text-center mt-5">
+        ✌️ This project was coded by Yelyzaveta, and it is
+        <a href="https://github.com/peevaliz/portfolio-project" target="_blank">
+          open-sourced
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
