--- a/index.html
+++ b/index.html
@@ -26,29 +26,35 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>Document</title>
+    <title>Front-end developer | Yelyzaveta Pieieva</title>
+    <meta
+      name="description"
+      content="Yelyzaveta is a front-end developer based in Vancouver, Canada."
+    />
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Homepage">
           <img
             src="images/logo.png"
-            alt="logo"
+            alt="Yelyzaveta logo"
             class="logo d-none d-md-block"
           />
           <img
             src="images/logo-small.jpg"
-            alt="small logo"
+            alt="Yelyzaveta small logo"
             class="logo d-block d-md-none"
           />
         </a>
 
         <ul>
-          <li class="active"><a href="/"> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+          <li class="active"><a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Yelyzaveta"> About</a></li>
+          <li><a href="/work.html" title="Yelyzaveta`s work"> Work</a></li>
+          <li>
+            <a href="/contact.html" title="Contact Yelyzaveta"> Contact</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -57,7 +63,9 @@
       <p>👋 Hello, I'm</p>
       <h1>Yelyzaveta Pieieva</h1>
       <h2 class="mb-5">Front-end developer based in Vancouver, Canada</h2>
-      <a href="about.html#contact-me" class="btn btn-branding">Contact me</a>
+      <a href="/contact.html" title="Contact me" class="btn btn-branding"
+        >Contact me</a
+      >
     </div>
     <p class="mb-5 mt-5 text-center">
       Featured Project which my best projects be choice to show
@@ -76,7 +84,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-secondary">Learn more</a>
+            <a
+              href="/work.html"
+              title="Learn more"
+              class="btn btn-branding-secondary"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -90,7 +103,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-secondary">Learn more</a>
+            <a
+              href="/work.html"
+              title="Learn more"
+              class="btn btn-branding-secondary"
+              >Learn more</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -118,7 +136,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-secondary">Learn more</a>
+            <a
+              href="/work.html"
+              title="Learn more"
+              class="btn btn-branding-secondary"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -127,30 +150,55 @@
           class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a
+              href="/contact.html"
+              title="Contact Yelyzaveta"
+              class="btn btn-branding mt-3"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:peeva.liz@gmail.com" class="email-link"
+          <a
+            href="mailto:peeva.liz@gmail.com"
+            title="Email to Yelyzaveta"
+            class="email-link"
             >peeva.liz@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/life_by_elisabeth/"
+          <a
+            href="https://www.instagram.com/life_by_elisabeth/"
+            title="Instagram profile"
+            target="_blank"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://github.com/peevaliz"
+          <a
+            href="https://github.com/peevaliz"
+            title="GitHub profile"
+            target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a
             href="https://www.facebook.com/profile.php?id=100017708328922&mibextid=LQQJ4d"
+            title="Facebook profile"
+            target="_blank"
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          ✌️ This project was coded by Yelyzaveta, and it is
+          <a
+            href="https://github.com/peevaliz/portfolio-project"
+            target="_blank"
+          >
+            open-sourced
+          </a>
+        </p>
       </footer>
     </div>
   </body>
